# DBX

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-pages.yml  docs.yml  publish-crates.yml  publish-npm.yml  publish-nuget.yml  publish-pypi.yml  release.yml
core/dbx-core/: Cargo.toml  README.md
core/dbx-core/benches/: parallel_engine_bench.rs  parallel_parser_optimized.rs  phase1_benchmarks.rs  phase1_improved_benchmarks.rs  phase2_benchmarks.rs  phase2_comparison.rs  sql_insert_benchmark.rs  sql_update_delete_benchmark.rs  sql_vs_kv.rs  storage_bench.rs
core/dbx-core/examples/: analyze_update_delete.rs  basic_crud.rs  check_assignment_delete.rs  check_delete_only.rs  check_insert_structure.rs  check_update_delete_structure.rs  dashmap_vs_rwlock.rs  empty_delete_pattern.rs  encryption.rs  gpu_acceleration.rs  logging.rs  migration.rs  perf_compare.rs  performance.rs  query_builder.rs  quick_db_compare.rs  simple_update_delete.rs  test_ddl.rs  test_delete_fields.rs  test_gpu.rs  test_insert_ast.rs  test_metadata_persistence.rs  test_snapshot.rs  test_update.rs  transactions.rs
core/dbx-core/src/: error.rs  index.rs  lib.rs  logging.rs  simd.rs
core/dbx-core/src/api/: mod.rs  query.rs  traits.rs  transaction.rs
core/dbx-core/src/automation/: callable.rs  executor.rs  integration_tests.rs  mod.rs
core/dbx-core/src/automation/scheduler/: core.rs  job.rs  mod.rs  schedule.rs  scheduler.rs
core/dbx-core/src/automation/trigger/: core.rs  event.rs  mod.rs  trigger.rs
core/dbx-core/src/automation/udf/: aggregate.rs  mod.rs  scalar.rs  table.rs
core/dbx-core/src/bindings/: mod.rs  transaction.rs
core/dbx-core/src/engine/: automation_api.rs  benchmark.rs  compaction.rs  constructors.rs  crud.rs  database.rs  database_snapshot.rs  delta_variant.rs  feature_flags.rs  index.rs  index_versioning.rs  metadata.rs  mod.rs  parallel_engine.rs  parallel_engine_tests.rs  plan.rs  prepared.rs  prepared_impl.rs  rollback.rs  schema_versioning.rs  serialization.rs  snapshot.rs  sql_interface.rs  stream.rs  transactions.rs  types.rs  udf_api.rs  utilities.rs  wos_variant.rs
core/dbx-core/src/sql/: mod.rs  optimizer.rs  parallel_parser.rs  parser.rs
core/dbx-core/src/sql/executor/: expr.rs  mod.rs  parallel_query.rs
core/dbx-core/src/sql/executor/operators/: filter.rs  hash_aggregate.rs  join.rs  limit.rs  mod.rs  physical_operator.rs  projection.rs  sort.rs  table_scan.rs
core/dbx-core/src/sql/optimizer/: constant_folding.rs  limit_pushdown.rs  mod.rs  predicate_pushdown.rs  projection_pushdown.rs  tests.rs
core/dbx-core/src/sql/planner/: logical.rs  logical_tests.rs  mod.rs  optimizer.rs  physical.rs  types.rs  update_delete_impl.tmp  update_delete_tests.rs
core/dbx-core/src/storage/: arrow_ipc.rs  cache.rs  columnar.rs  columnar_cache.rs  columnar_cache_persistent.rs  columnar_delta.rs  compression.rs  delta_store.rs  encrypted_parquet.rs  encrypted_wos.rs  encryption.rs  gpu.rs.backup2  index.rs  kernels.cu  kv_adapter.rs  memory_wos.rs  mod.rs  opfs.rs  parquet_io.rs  versioned_batch.rs  wos.rs
core/dbx-core/src/storage/gpu/: adaptive.rs  aggregation.rs  data.rs  group_by.rs  hash_join.rs  manager.rs  memory.rs  memory_pool.rs  mod.rs  multi_device.rs  occupancy.rs  persistent.rs  radix_sort.rs  sharding.rs  strategy.rs  topology.rs
core/dbx-core/src/transaction/: gc.rs  manager.rs  mod.rs  snapshot.rs  version.rs  version_manager.rs  versionable.rs
core/dbx-core/src/wal/: buffer.rs  checkpoint.rs  encrypted_wal.rs  mod.rs  partitioned_wal.rs
core/dbx-core/tests/: advanced_serialization_tests.rs  phase1_regression_tests.rs  phase2_integration_tests.rs
core/dbx-csharp/: Cargo.toml  build.rs
core/dbx-csharp/src/: lib.rs
core/dbx-derive/: Cargo.toml  README.md
core/dbx-derive/src/: lib.rs
core/dbx-derive/tests/: derive_table.rs
core/dbx-ffi/: Cargo.toml  README.md  dbx.h
core/dbx-ffi/src/: lib.rs
core/dbx-node/: Cargo.toml
core/dbx-node/src/: lib.rs
core/dbx-py/: Cargo.toml  pyproject.toml
core/dbx-py/src/: lib.rs
docs/: Gemfile  _config.yml  index.md
docs/english/: LICENSE.md  api-reference.md  architecture.md  benchmarks.md  changelog.md  examples.md  getting-started.md  index.md  roadmap.md
docs/english/api/: database.md  sql.md  transaction.md
docs/english/examples/: compression.md  encryption.md  indexing.md  quick-start.md  sql-quick-start.md  wal-recovery.md
docs/english/guides/: compression.md  crud-operations.md  encryption.md  feature-flags.md  gpu-acceleration.md  indexing.md  language-bindings.md  parallel-query.md  plan-cache.md  scheduler.md  schema-versioning.md  sql-reference.md  storage-layers.md  transactions.md  triggers.md  udf.md  wal-recovery.md
docs/english/tutorials/: beginner.md
docs/korean/: LICENSE.md  README.md  api-reference.md  architecture.md  benchmarks.md  changelog.md  examples.md  getting-started.md  index.md  roadmap.md
docs/korean/api/: database.md  sql.md  transaction.md
docs/korean/dotnet/: api-reference.md  index.md  installation.md  sql-guide.md
docs/korean/examples/: compression.md  encryption.md  indexing.md  quick-start.md  sql-quick-start.md  wal-recovery.md
docs/korean/guides/: compression.md  encryption.md  (+15 more)
lang/: BENCHMARKS.md  BENCHMARK_RESULTS.md
lang/c/: README.md
lang/dotnet/: QUICKSTART.md
lang/nodejs/: .rustc_info.json  README.md  index.js  package-lock.json  package.json
lang/python/: README.md  pyproject.toml  setup.py  test_simple.py
lang/python/benchmarks/: benchmark_crud.py  benchmark_native.py  benchmark_vs_sqlite.py  benchmark_vs_sqlite_ffi_tx.py  benchmark_vs_sqlite_optimized.py  benchmark_vs_sqlite_tx.py
lang/python/dbx_py/: __init__.py  database.py
lang/python/examples/: basic_crud.py
legal/english/: CONTRIBUTING.md  LICENSE-COMMERCIAL.md  LICENSE-POLICY.md  THIRD_PARTY_LICENSES.md
legal/korean/: CONTRIBUTING.md  LICENSE-COMMERCIAL.md  LICENSE-POLICY.md  THIRD_PARTY_LICENSES.md
scripts/: bump-version.ts  package-lock.json  package.json  tsconfig.json
(+189 files in other folders)
