[workspace]
members = [
    "core/dbx-core",
    "core/dbx-derive",
    "core/dbx-ffi",
    "core/dbx-py",
    "core/dbx-csharp",
    "core/dbx-node",
]
resolver = "2"

[workspace.package]
version = "0.0.2-beta"
edition = "2024"
license = "MIT"
repository = "https://github.com/bytelogiccore-spec/DBX"
homepage = "https://bytelogic.studio/dbx"
documentation = "https://docs.rs/dbx-core"

