[workspace]
members = [
    "core/dbx-core",
    "core/dbx-ffi",
    "core/dbx-py",
    "core/dbx-csharp",
    "core/dbx-node",
]
resolver = "2"

[workspace.package]
version = "0.0.3-beta"
edition = "2024"
license = "MIT"
repository = "https://github.com/bytelogiccore-spec/DBX"
homepage = "https://bytelogiccore-spec.github.io/DBX/"
documentation = "https://docs.rs/dbx-core"

