[package]
name = "dbx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-performance file-based database engine with 5-Tier Hybrid Storage"

[dependencies]
# Derive macros
dbx-derive = { path = "../dbx-derive", version = "0.0.1-beta" }

# Error handling
thiserror = "2.0"

# Data format — Arrow/Parquet
arrow = { version = "54", features = ["prettyprint"] }
parquet = { version = "54", features = ["arrow"] }

# Storage engines
sled = "0.34"
dashmap = "6.1"
lru = "0.12"
crossbeam-skiplist = "0.1"
parking_lot = "0.12"

# Performance
ahash = "0.8"
smallvec = "1.15"
rayon = "1.10"

# Logging (zero-cost in release)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
sqlparser = "0.52"

# WAL serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Encryption — AEAD ciphers + key derivation
aes-gcm-siv = "0.11"
chacha20poly1305 = "0.10"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
tempfile = "3.24"

[dev-dependencies]
proptest = "1.10"
criterion = { version = "0.5", features = ["html_reports"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sled = "0.34"
redb = "2.1"

[features]
default = []
simd = []
jit = []
gpu = ["cudarc"]
logging = ["tracing-subscriber"]

[dependencies.cudarc]
version = "0.19.2"
optional = true
features = ["driver", "nvrtc", "cuda-12050"]

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "sql_insert_benchmark"
harness = false

[[bench]]
name = "sql_update_delete_benchmark"
harness = false

[[bench]]
name = "sql_vs_kv"
harness = false
