[package]
name = "dbx-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for DBX database engine (#[derive(Table)])"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
dbx-core = { path = "../dbx-core" }
arrow = { version = "54", features = ["prettyprint"] }
