[package]
name = "dbx-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "C FFI bindings for DBX database"
readme = "README.md"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
dbx-core = { path = "../dbx-core", version = "0.0.5-beta" }
libc = "0.2"
