[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbx-py"
version = "0.0.1-beta"
description = "Python bindings for DBX high-performance database"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "DBX Contributors"}
]
keywords = ["database", "embedded", "key-value", "storage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
]

[project.urls]
Homepage = "https://github.com/yourusername/dbx"
Repository = "https://github.com/yourusername/dbx"
Documentation = "https://dbx.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["dbx_py*"]
